platform/security/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: security
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.haoxiaoguai.xyz`)
      kind: Rule
      middlewares:
        - name: chain-basic
          namespace: traefik
      services:
        - name: authelia
          port: 9091
  tls:
    certResolver: cloudflare
